
* Changed the logic for assigning reads to reference genomes; reads are now
  assigned to the reference genome to which they align with the smallest number
  of mismatches. In the event of a tie where the read aligns to more than one
  genome with the same number of mismatches, the reference genome with the
  largest number of preferentially aligned reads (best hits) is chosen.

* Added support for large reference genomes requiring use of large bowtie
  indexes.

* Fixed problem with report generation not able to run on hosts without an X11
  environment.

* Improvements to the report including change of criteria for including a
  species as separate entry in the table of potential contaminants (only the
  species most likely to be contaminants now included)

* Added prototype MGA wrapper for Illumina BaseSpace.

* Fixed problem with separate report per dataset containing tables for all
  datasets.


Version 1.3 (10 January 2014)
-----------

* Major reworking of pipeline to combine FASTQ records from multiple datasets
  and splitting the sequence data into chunks with a specified number of
  records, corresponding changes to report generation code.

* FASTQ sampling rewritten to use modified version of reservoir sampling method.

* Added option for setting the maximum number of FASTQ records to sample from.

* Added option to create separate reports for each dataset in addition to the
  report for all.

* Added option to specify the minimum number of sequences to display on the
  x-axis of the stacked bar plot in the report.

* Improved scaling for larger image sizes for the stacked bar plot and added
  anti-aliasing for text.

* Removed utility for creating a configuration file from the Solexa LIMS (no
  longer in use).


Version 1.2 (4 February 2013)
-----------

* Fix for failing validation of XML schema definitions.

* New utility for creating the run metadata file by retrieving information
  from the Solexa LIMS via the SOAP API.

